fix overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 
 .mainContainer{
     width:100vw;
+    height:100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
